--- a/ProdutosMarcas.Persistencia.EF/ProdutosMarcas.Persistencia.EF.csproj
+++ b/ProdutosMarcas.Persistencia.EF/ProdutosMarcas.Persistencia.EF.csproj
@@ -31,7 +31,14 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.dll</HintPath>
+    </Reference>
+    <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -41,7 +48,28 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Context\ProdutosMarcasDbContext.cs" />
+    <Compile Include="Migrations\201912032133245_Migration_Inicial_Criacao_Produto_Marca.cs" />
+    <Compile Include="Migrations\201912032133245_Migration_Inicial_Criacao_Produto_Marca.Designer.cs">
+      <DependentUpon>201912032133245_Migration_Inicial_Criacao_Produto_Marca.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="App.config" />
+    <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\ProdutosMarcas.Dominio\ProdutosMarcas.Dominio.csproj">
+      <Project>{03DB0763-07AB-4C34-A2F1-BCBC50AA52EC}</Project>
+      <Name>ProdutosMarcas.Dominio</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201912032133245_Migration_Inicial_Criacao_Produto_Marca.resx">
+      <DependentUpon>201912032133245_Migration_Inicial_Criacao_Produto_Marca.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
