--- a/ProdutosMarcas.Apresentacao/ProdutosMarcas.Apresentacao.csproj
+++ b/ProdutosMarcas.Apresentacao/ProdutosMarcas.Apresentacao.csproj
@@ -33,7 +33,14 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.dll</HintPath>
+    </Reference>
+    <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -72,6 +79,8 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ViewModels\MarcaViewModel.cs" />
+    <Compile Include="ViewModels\ProdutoViewModel.cs" />
     <EmbeddedResource Include="FrmInicio.resx">
       <DependentUpon>FrmInicio.cs</DependentUpon>
     </EmbeddedResource>
@@ -93,6 +102,7 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -108,6 +118,20 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Resources\" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\ProdutosMarcas.Dominio\ProdutosMarcas.Dominio.csproj">
+      <Project>{03db0763-07ab-4c34-a2f1-bcbc50aa52ec}</Project>
+      <Name>ProdutosMarcas.Dominio</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\ProdutosMarcas.Repositorio.Comum\ProdutosMarcas.Repositorio.Comum.csproj">
+      <Project>{49e3002f-2aee-427e-b100-1356f3287d67}</Project>
+      <Name>ProdutosMarcas.Repositorio.Comum</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\ProdutosMarcas.Repositorio.EF\ProdutosMarcas.Repositorio.EF.csproj">
+      <Project>{6476f6c9-9261-46c5-a2e7-f0e3837349ba}</Project>
+      <Name>ProdutosMarcas.Repositorio.EF</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
